# Wizardcoder-TPU

./: .gitignore  CMakeLists.txt  Readme.md
compile/: compile.sh  export_to_onnx.py  modeling_gpt_bigcode.py  requirements.txt
demo/: CMakeLists.txt  autoconfig.cc  demo.cc  demo.cpp  gpt2tokenizer.cc  opt.cc  wizardcoder.cc
demo/c/: CMakeLists.txt  bmwizardcoder_test.c  wizardcoder_c.cc  wizardcoder_c.h
demo/include/: config.h  opt.h  tokenizer.h  utils.h  wizardcoder.h
demo/python/: CMakeLists.txt  pybmwizardcoder.i
